--- a/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
@@ -1,3 +1,6 @@
+.pageWrapper {
+  padding: 20px;
+}
 .link {
   display: flex;
   gap: 2px;
@@ -7,3 +10,22 @@
   font-size: 16px;
   /* margin-left: 26px; */
 }
+.wrapper {
+  display: flex;
+  gap: 30px;
+}
+
+.linkContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.linkContainer a {
+  text-decoration: none;
+  font-size: 16px;
+  padding: 5px 0;
+  transition: color 0.3s;
+}
+/* .linkContainera:hover {
+  color: #0056b3;      
+} */
