--- a/src/components/MovieList/MovieList.module.css
+++ b/src/components/MovieList/MovieList.module.css
@@ -1,2 +1,17 @@
 
 
+.item{
+ list-style-type:  none; 
+ font-size: 22px;  
+margin-bottom: 4px;
+
+}
+
+.item a {
+    color:inherit;
+  
+}
+
+.item :hover {
+    color: red;
+}
